--- a/Rebuc/Tickets.storyboard
+++ b/Rebuc/Tickets.storyboard
@@ -80,5 +80,20 @@
             </objects>
             <point key="canvasLocation" x="-258.39999999999998" y="174.96251874062969"/>
         </scene>
+        <!--New Ticket View Controller-->
+        <scene sceneID="HU3-J3-OdL">
+            <objects>
+                <viewController storyboardIdentifier="NewTicketViewController" id="FiM-3j-mEg" customClass="NewTicketViewController" customModule="Rebuc" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="8YS-qg-DMH">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <viewLayoutGuide key="safeArea" id="Txt-uc-SBE"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zaE-xt-4DU" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="447" y="177"/>
+        </scene>
     </scenes>
 </document>
