--- a/Rebuc/Tickets.storyboard
+++ b/Rebuc/Tickets.storyboard
@@ -98,6 +98,7 @@
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="Gd0-N2-Jdy">
                                 <rect key="frame" x="16" y="61" width="343" height="150"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" red="0.2225409169" green="0.64776332489999999" blue="0.327020688" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="150" id="hAI-16-Ew0"/>
                                 </constraints>
@@ -139,6 +140,135 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zaE-xt-4DU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="447" y="177"/>
+        </scene>
+        <!--Ticket Details View Controller-->
+        <scene sceneID="ZtZ-vZ-DZc">
+            <objects>
+                <viewController storyboardIdentifier="TicketDetailsViewController" id="8WP-Jb-TGn" customClass="TicketDetailsViewController" customModule="Rebuc" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="sWK-Hl-74r">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZSR-U2-piL">
+                                <rect key="frame" x="15" y="30" width="50" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="BXz-vo-g2A"/>
+                                    <constraint firstAttribute="width" constant="50" id="Yis-IZ-5tI"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qNM-K4-BDl">
+                                <rect key="frame" x="75" y="44" width="290" height="23"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="19"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Responsable" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zG5-bA-IuZ">
+                                <rect key="frame" x="15" y="88" width="88" height="18"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fR3-yn-7uf">
+                                <rect key="frame" x="108" y="82" width="200" height="30"/>
+                                <color key="tintColor" red="0.2225409169" green="0.64776332489999999" blue="0.327020688" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hDW-MQ-IuP">
+                                <rect key="frame" x="10" y="627" width="303" height="30"/>
+                                <color key="tintColor" red="0.2225409169" green="0.64776332489999999" blue="0.327020688" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UG7-0n-DR9">
+                                <rect key="frame" x="323" y="627" width="42" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="42" id="i1w-ZX-FfG"/>
+                                </constraints>
+                                <state key="normal" title="Enviar">
+                                    <color key="titleColor" red="0.2225409169" green="0.64776332489999999" blue="0.327020688" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="sendMessage:" destination="8WP-Jb-TGn" eventType="touchUpInside" id="XC6-oC-0DZ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S9x-qa-aoT">
+                                <rect key="frame" x="313" y="82" width="52" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="52" id="0pP-43-0da"/>
+                                </constraints>
+                                <state key="normal" title="Asignar">
+                                    <color key="titleColor" red="0.2225409169" green="0.64776332489999999" blue="0.327020688" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="assignResponsable:" destination="8WP-Jb-TGn" eventType="touchUpInside" id="t4E-NT-nAz"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Descripcion:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="avv-MW-dxG">
+                                <rect key="frame" x="15" y="124" width="350" height="17"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="gRr-8P-plq">
+                                <rect key="frame" x="0.0" y="161" width="375" height="456"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="JfL-4s-mg1">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JfL-4s-mg1" id="EM6-9Z-zUp">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="avv-MW-dxG" firstAttribute="top" secondItem="zG5-bA-IuZ" secondAttribute="bottom" constant="18" id="1Mb-pn-OoE"/>
+                            <constraint firstItem="avv-MW-dxG" firstAttribute="trailing" secondItem="S9x-qa-aoT" secondAttribute="trailing" id="1ac-eK-wkP"/>
+                            <constraint firstItem="hDW-MQ-IuP" firstAttribute="top" secondItem="gRr-8P-plq" secondAttribute="bottom" constant="10" id="2Cf-Lz-L8f"/>
+                            <constraint firstItem="qHo-pU-TUd" firstAttribute="trailing" secondItem="gRr-8P-plq" secondAttribute="trailing" id="7H5-rj-eJh"/>
+                            <constraint firstItem="zG5-bA-IuZ" firstAttribute="leading" secondItem="ZSR-U2-piL" secondAttribute="leading" id="Bz5-QF-EEp"/>
+                            <constraint firstItem="qHo-pU-TUd" firstAttribute="trailing" secondItem="qNM-K4-BDl" secondAttribute="trailing" constant="10" id="CXW-Dl-b6H"/>
+                            <constraint firstItem="qHo-pU-TUd" firstAttribute="bottom" secondItem="UG7-0n-DR9" secondAttribute="bottom" constant="10" id="EjT-pZ-Vnp"/>
+                            <constraint firstItem="qHo-pU-TUd" firstAttribute="trailing" secondItem="UG7-0n-DR9" secondAttribute="trailing" constant="10" id="FjR-2b-Tg2"/>
+                            <constraint firstItem="hDW-MQ-IuP" firstAttribute="leading" secondItem="qHo-pU-TUd" secondAttribute="leading" constant="10" id="HuG-TO-ItJ"/>
+                            <constraint firstItem="zG5-bA-IuZ" firstAttribute="top" secondItem="ZSR-U2-piL" secondAttribute="bottom" constant="8" id="Iya-SU-BhQ"/>
+                            <constraint firstItem="S9x-qa-aoT" firstAttribute="leading" secondItem="fR3-yn-7uf" secondAttribute="trailing" constant="5" id="K7V-Z3-fHA"/>
+                            <constraint firstItem="qNM-K4-BDl" firstAttribute="leading" secondItem="ZSR-U2-piL" secondAttribute="trailing" constant="10" id="Ll7-TO-dff"/>
+                            <constraint firstItem="avv-MW-dxG" firstAttribute="leading" secondItem="zG5-bA-IuZ" secondAttribute="leading" id="Msh-JX-FHq"/>
+                            <constraint firstItem="qNM-K4-BDl" firstAttribute="centerY" secondItem="ZSR-U2-piL" secondAttribute="centerY" id="Q9S-wD-6QX"/>
+                            <constraint firstItem="qHo-pU-TUd" firstAttribute="bottom" secondItem="hDW-MQ-IuP" secondAttribute="bottom" constant="10" id="Tgj-Iw-mmS"/>
+                            <constraint firstItem="gRr-8P-plq" firstAttribute="top" secondItem="avv-MW-dxG" secondAttribute="bottom" constant="20" id="aQU-Mw-suk"/>
+                            <constraint firstItem="fR3-yn-7uf" firstAttribute="centerY" secondItem="zG5-bA-IuZ" secondAttribute="centerY" id="g6f-cd-ef4"/>
+                            <constraint firstItem="ZSR-U2-piL" firstAttribute="leading" secondItem="qHo-pU-TUd" secondAttribute="leading" constant="15" id="i8k-IV-Zb7"/>
+                            <constraint firstItem="UG7-0n-DR9" firstAttribute="leading" secondItem="hDW-MQ-IuP" secondAttribute="trailing" constant="10" id="iic-13-gcv"/>
+                            <constraint firstItem="S9x-qa-aoT" firstAttribute="centerY" secondItem="zG5-bA-IuZ" secondAttribute="centerY" id="j4I-Fg-0Hr"/>
+                            <constraint firstItem="S9x-qa-aoT" firstAttribute="trailing" secondItem="qNM-K4-BDl" secondAttribute="trailing" id="rzR-kS-sO8"/>
+                            <constraint firstItem="ZSR-U2-piL" firstAttribute="top" secondItem="qHo-pU-TUd" secondAttribute="top" constant="10" id="ugK-Rg-a33"/>
+                            <constraint firstItem="gRr-8P-plq" firstAttribute="leading" secondItem="qHo-pU-TUd" secondAttribute="leading" id="uy5-Yu-Rfi"/>
+                            <constraint firstItem="fR3-yn-7uf" firstAttribute="leading" secondItem="zG5-bA-IuZ" secondAttribute="trailing" constant="5" id="ymi-qD-NAu"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="qHo-pU-TUd"/>
+                    </view>
+                    <connections>
+                        <outlet property="assignResponsableButton" destination="S9x-qa-aoT" id="cKY-dp-w4N"/>
+                        <outlet property="descriptionLabel" destination="avv-MW-dxG" id="tZZ-Bh-0No"/>
+                        <outlet property="messageTextView" destination="hDW-MQ-IuP" id="HuS-iz-eBC"/>
+                        <outlet property="responsableTextView" destination="fR3-yn-7uf" id="08X-3X-ZpT"/>
+                        <outlet property="tableView" destination="gRr-8P-plq" id="Z7P-7c-ICT"/>
+                        <outlet property="ticketNumberLabel" destination="qNM-K4-BDl" id="BXh-hc-WFd"/>
+                        <outlet property="ticketStateImageView" destination="ZSR-U2-piL" id="KWt-6O-2Zf"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="yF4-JX-2jM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1128.8" y="176.76161919040482"/>
         </scene>
     </scenes>
 </document>
