--- a/Rebuc/Base.lproj/LaunchScreen.storyboard
+++ b/Rebuc/Base.lproj/LaunchScreen.storyboard
@@ -21,14 +21,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="rebuc-logo" translatesAutoresizingMaskIntoConstraints="NO" id="Zph-Lc-FVY">
-                                <rect key="frame" x="115" y="297" width="144" height="72"/>
+                            <imageView clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ucol-logo" translatesAutoresizingMaskIntoConstraints="NO" id="Zph-Lc-FVY">
+                                <rect key="frame" x="50" y="50" width="275" height="567"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Zph-Lc-FVY" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="KvH-Tb-bqV"/>
+                            <constraint firstAttribute="trailing" secondItem="Zph-Lc-FVY" secondAttribute="trailing" constant="50" id="Sb0-28-NS7"/>
+                            <constraint firstAttribute="bottom" secondItem="Zph-Lc-FVY" secondAttribute="bottom" constant="50" id="TOf-5k-qDS"/>
                             <constraint firstItem="Zph-Lc-FVY" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="Zu9-6X-Ir9"/>
+                            <constraint firstItem="Zph-Lc-FVY" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" constant="50" id="inY-m3-jWr"/>
+                            <constraint firstItem="Zph-Lc-FVY" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" constant="50" id="zoL-QV-JYE"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -38,6 +42,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="rebuc-logo" width="144" height="72"/>
+        <image name="ucol-logo" width="444" height="449"/>
     </resources>
 </document>
