--- a/Rebuc/Tickets.storyboard
+++ b/Rebuc/Tickets.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -177,6 +178,7 @@
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="hDW-MQ-IuP">
                                 <rect key="frame" x="10" y="583" width="268" height="30"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <color key="tintColor" red="0.2225409169" green="0.64776332489999999" blue="0.327020688" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -216,13 +218,41 @@
                                 <rect key="frame" x="0.0" y="161" width="375" height="412"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="JfL-4s-mg1">
-                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TicketMovementCell" rowHeight="73" id="JfL-4s-mg1" customClass="TicketMovementCell" customModule="Rebuc" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="73"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="JfL-4s-mg1" id="EM6-9Z-zUp">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="72.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tipo de movimiento" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oYu-ej-sYk">
+                                                    <rect key="frame" x="25" y="16" width="325" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Descripción" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F08-yw-8Gs">
+                                                    <rect key="frame" x="25" y="40.5" width="325" height="16"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="bottomMargin" secondItem="F08-yw-8Gs" secondAttribute="bottom" constant="5.5" id="1Re-5b-iNY"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="oYu-ej-sYk" secondAttribute="trailing" constant="10" id="R3J-e5-K5c"/>
+                                                <constraint firstItem="F08-yw-8Gs" firstAttribute="top" secondItem="oYu-ej-sYk" secondAttribute="bottom" constant="4" id="kjn-Sh-y1x"/>
+                                                <constraint firstItem="oYu-ej-sYk" firstAttribute="top" secondItem="EM6-9Z-zUp" secondAttribute="topMargin" constant="5" id="nbL-F0-mcb"/>
+                                                <constraint firstItem="oYu-ej-sYk" firstAttribute="leading" secondItem="EM6-9Z-zUp" secondAttribute="leadingMargin" constant="10" id="npq-5k-ZMd"/>
+                                                <constraint firstItem="F08-yw-8Gs" firstAttribute="trailing" secondItem="oYu-ej-sYk" secondAttribute="trailing" id="s1f-e0-DVO"/>
+                                                <constraint firstItem="F08-yw-8Gs" firstAttribute="leading" secondItem="oYu-ej-sYk" secondAttribute="leading" id="ybU-O8-6bL"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.96470588239999999" green="0.96470588239999999" blue="0.96470588239999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <outlet property="movementDescriptionLabel" destination="F08-yw-8Gs" id="9Y5-C7-b50"/>
+                                            <outlet property="movementTagLabel" destination="oYu-ej-sYk" id="15J-nH-qHj"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
